--- a/Internet-and-Data-Centers.tex
+++ b/Internet-and-Data-Centers.tex
@@ -1984,12 +1984,14 @@ Le CDN possono instaurare peering tra di loro per espandere l'area di influenza 
 
 \section{Data Center}
 
+I \textit{Data Center}, (DC), sono aree locali dove sono presenti server proprietari dell'organizzazione che possiede il DC, o dei propri clienti, offrendo connettività, distribuzione e risorse cloud molto elevate in un'unica locazione geografica. 
+
 \subsection{Multi-Path}
 
 L'idea di multi-path consiste nella presenza di più rotte per uno stesso prefisso, quindi avere vari next-hop possibili. Dal momento in cui sono più di uno diventa multi-path. 
 BGP invece di scegliere una best sceglie due rotte di qualità uguale, e quindi le accetta entrambe, scrivendole in tabella. Anche alcuni IGP possono effettuarlo. 
 
-Serve il supporto kernel per poter avere più next-hop in tabella di instradamento, ma nel momento in cui si va su un pezzo di hardware si ha bisogno di hardware support per queste capacità. 
+Serve il supporto kernel per poter avere più next-hop in tabella di instradamento, ma nel momento in cui si lavora a livello hardware si ha bisogno di supporto hardware per queste capacità. 
 
 Molte politiche non si possono usare, quindi si applicano politiche molto semplici come round robin. 
 
@@ -2000,12 +2002,12 @@ Si effettua poiché riordinare i pacchetti è computazionalmente pesante.
 Dentro un data center si vuole poter sfruttare tutto fino all'estremo. Quando si mandano dei pacchetti, TCP può ricevere pacchetti fuori sequenza e riordinarli, inviando ack duplicati, mantenendoli nel buffer. In un data center non si ha la dimensione di buffer in grado di gestire l'enorme quantità di dati che passano al suo interno. Si usano link da almeno 100 gigabit. 
 
 Se si manda un pacchetto fuori ordine per poterlo riordinare il pacchetto deve inviare un ack duplicato ed un interrupt, e si perde il vantaggio del multi-path. 
-Si vuole immaginare una politica che i pacchetti dello stesso flusso prendano lo stesso percorso. 
+Si vuole applicare una politica in cui i pacchetti dello stesso flusso prendano lo stesso percorso. 
 
 
-Ci si concentra sul tipo di multi-path più usato, \textit{Equal-Cost Multi-Path} (ECMP), accettando varie alternative solo se hanno lo stesso costo. 
+Ci si concentra sul tipo di multi-path più usato, \textit{Equal-Cost Multi-Path} (ECMP), accettando varie alternative solo se hanno lo stesso costo, interrompendo il processo di spareggio ad un certo livello, poiché alcuni protocolli di routing sono completamente deterministici. 
 
-Spesso vengono usati nei \textit{Fat-Tree} dei data centers. Le policy più famose sono basate su una funzione di hash in base al flusso livello 3 e 4, anche se tecnicamente più complesso può utilizzare al meglio il multi-path. Oppure si può usare algoritmo round robin, anche se non è così efficiente come si crede. 
+Spesso vengono usati nei \textit{Fat-Tree} dei data centers. Le policy più famose sono basate su una funzione di hash in base al flusso livello 3 e 4, anche se tecnicamente più complesso può utilizzare al meglio il multi-path. Oppure si può usare l'algoritmo round robin, anche se non è così efficiente come si crede. 
 Queste policy permettono di parallelizzare la banda. 
 
 
@@ -2013,18 +2015,15 @@ I data center qua trattati avranno multi-path, questi non funzionano su Windows,
 
 \subsection{Hyper-scale Data Centers}
 
-Quando si parlano di data centers si parla di hyper-scale data centers. Bisogna conoscere la differenza tra i due, questi sono data center che scalano tanto, i data center di AWS, Azure, Google Cloud. 
-
+Quando si parla di data centers, in questo corso, si parla di hyper-scale data centers. Bisogna conoscere la differenza tra i due, questi sono data center che scalano tanto, i data center dei più grandi provider come AWS, Azure, Google Cloud. 
 Il Namex usa una struttura ridotta di questa architettura, ma è comunque dello stesso tipo. 
 
-Un data center deve avere connessioni ad Internet, sono multiple, ridondanti, ad alta velocità ed in fibra ottica. 
-Per fabric si intende l'insieme di router e switch, l'infrastruttura dedicata a collegare i server all'Internet, ci si concentra principalmente sulla fabric. 
+Un data center deve avere connessioni ad Internet, multiple, ridondanti, ad alta velocità ed in fibra ottica. 
+
+Per \textit{fabric} si intende l'insieme di router e switch, l'infrastruttura dedicata a collegare i server all'Internet, ci si concentra principalmente sulla fabric. 
 Il cuore del data center è la server farm, contenente le applicazioni ed i servizi. 
 
 Lo standard vuole che siano rappresentati verticalmente dall'alto verso il basso con Internet, fabric e server farm. Per cui si parlerà di link verso nord e verso sud, quindi verso l'alto e verso il basso, universalmente usata per i data center. 
-
-
-%% !! FABRIC ARCHITECTURE
 
 
 I link sono tutti in fibra ottica, poiché bisogna andare velocemente ed avere bassa latenza, e tutte le qualità che non sono garantite da cavi in rame. Ogni connessione ha link da almeno 100 gigabit al secondo. Uno switch ha almeno 64 porte, si parla di circa 5000 oggetti di rete e 60000 server. 
@@ -2049,36 +2048,35 @@ La rete deve essere in grado di scalare in modo efficiente e resiliente, poiché
 
 
 I nodi interni di un data center possono essere connessi con hardware specializzato, creato appositamente per comunicazione ad alta velocità tra cluster di migliaia di nodi, questa è la scelta adottata da Google, ed è la scelta più costosa. 
-L'idea di vendor lock-in è l'idea di comprare apparati dello stesso vendor, e si sarà costretti a comprare solo apparati di quella marca, altrimenti non sarebbe compatibile con la l'infrastruttura. L'hardware specializzato rappresenta vendor lock-in, e si vuole evitare. 
-L'altra opzione consiste di usare modelli normali, non specializzati, più economico, ed anche meno affidabili. Questa sarà la decisione che verrà usata andando avanti. 
+L'idea di vendor lock-in è l'idea di comprare apparati dello stesso vendor, e si sarà costretti a comprare solo apparati di quella marca, altrimenti non sarebbe compatibile con la l'infrastruttura. L'hardware specializzato rappresenta vendor lock-in, e si vuole evitare, poiché dipendenti dallo specifico vendero ed i loro possibili aumenti dei prezzi. 
+L'altra opzione consiste di usare apparati normali, non specializzati, più economici, ed anche meno affidabili. Questa sarà la decisione che verrà usata andando avanti. 
 
 La topologia deve essere scalabile, deve poter essere ingrandita senza ricostruire l'intera infrastruttura o spegnere l'intero data center, in modo trasparente dal punto di vista degli utenti e del data center, e senza avere una spesa eccessiva. Inoltre, si vorrebbe che gli host della fabric siano in grado di comunicare tutti con tutti, utilizzando ciascuno la piena banda della sua NIC. Questo requisito di banda sarà una guida fondamentale nelle decisioni successive. 
 
-Bisogna andare su topologie di rete dedicate a realizzare data center. A livello di letteratura o altri data center OTT, si usano altre topologie, oltre a Fat-Tree, come Clos\dots
+Bisogna andare su topologie di rete dedicate a realizzare data center. A livello di letteratura o altri data center OTT, si usano altre topologie, oltre a Fat-Tree, come Clos. 
 
+\subsubsection{Fat-Tree}
 
 La Clos è stata progettata nel 1938 per gestire la scalabilità in reti telefoniche, formalizzata da Charles Clos nel 1953. 
 Il problema che la Clos vuole risolvere è consentire di avere $N$ linee di input e $N$ linee di output in contemporanea, senza usare un singolo grande switch. 
 
 I Fat-Tree sono stati creati nel nel 1985, di certo non progettati per i data center. Sono un caso speciale della Clos, e consiste in un'architettura a tre livelli di nodi ad alta ridondanza. Consente una bisezione costante della banda disponibile. Tutti possono parlare con tutti usando tutta la banda. I nodi hanno le stesse caratteristiche, per immagazzinare più facilmente i ricambi. 
 
-La topologia Fat-Tree è modulare, facilmente scalabile. Viene definito da due soli parametri, il radix del nodo, un valore pari rappresentato con $2K$, indica il numero di porte del singolo apparato di rete. Mentre il fattore di ridondanza $R$, compreso tra $1$ e $K$, più è alto avrà più ridondanza, più è basso più è grande la topologia. 
+La topologia Fat-Tree è modulare, facilmente scalabile. Un Fat-Tree viene definito da due soli parametri, il radix del nodo, un valore pari rappresentato con $2K$, indica il numero di porte del singolo apparato di rete. Mentre il fattore di ridondanza $R$, compreso tra $1$ e $K$, più è alto avrà più ridondanza, più è basso più è grande la topologia. 
 Dato un apparato si avranno $K$ porte verso nord e $K$ porte verso sud. Secondo la definizione del Fat-Tree si potrebbero usare diverse scelte, non analizzate in questo corso. 
 
 
 Le \textit{Leaf} sono apparati connessi direttamente alla server farm, le \textit{Spine} connettono leaf ai nodi ToF. 
 I \textit{Top of Fabric} (ToF) sono i nodi che forniscono comunicazione tra i PoD. 
-I \textit{Point of Delivery} (PoD) son oun insieme di spine in full mesh con tutte le leaf. 
-Non sono presenti link orizzontali, bisogna sempre salire e poi scendere per attraversare orizzontalmente. 
+I \textit{Point of Delivery} (PoD) sono un insieme di spine in full mesh con le loro leaf. 
+Non sono presenti link orizzontali, bisogna sempre salire e poi scendere per attraversare orizzontalmente la topologia. 
 
-Il fattore $R$ determina il massimo numero di link tra un nodo ToF ad una PoD. Diminuendo la ridondanza si aumentano le connessioni tra un nodo ToF a più PoD. 
+Il fattore $R$ determina il massimo numero di link tra un nodo ToF ad una PoD. Diminuendo la ridondanza si aumentano le connessioni tra un nodo ToF a più PoD, e si diminuisce il numero di PoD. 
 
 
-Anche aumentando la dimensione di $K$, lo schema matematico rimane invariato. Quando $K\neq R$ il fat-tree si chiama multi-plane. I nodi ToF si possono separare in insiemi chiamati piani, si distinguono perché tutti i nodi di un plane si connettono alla $i$-esima posizione nella spine. 
-Rappresentazione tridimensionale. 
+Anche aumentando la dimensione di $K$, lo schema matematico rimane invariato. Quando $K\neq R$ il fat-tree si chiama multi-plane. I nodi ToF si possono separare in insiemi chiamati piani, si distinguono perché tutti i nodi di un plane si connettono alla $i$-esima posizione nella spine. Si possono rappresentare tridimensionalmente come due insiemi di piani ortogonali. 
 
-Per collegare il Fat-Tree all'Internet si possono avere due metodi principali. Si potrebbe inserire nella ToF usando apparati con più porte, rompendo il vincolo di avere apparati solo uguali, ma si ha Internet su porte dedicate sui piani. Un'altra opzione consiste nell'usare un PoD collegandolo ad Internet, qua si sacrifica la capacità di attaccare qualcuno dei server al data center, ma si rimane rispettosi delle regole base dei Fat-Tree. 
-
+Per collegare il Fat-Tree all'Internet si possono avere due metodi principali. Si potrebbe collegare nella ToF usando apparati con più porte, rompendo il vincolo di avere apparati solo uguali, ma si ha Internet su porte dedicate sui piani. Un'altra opzione consiste nell'usare un PoD collegandolo ad Internet, qua si sacrifica la capacità di attaccare qualcuno dei server al data center, ma si rimane rispettosi delle regole base dei Fat-Tree. 
 
 \clearpage
 
