--- a/Internet-and-Data-Centers.tex
+++ b/Internet-and-Data-Centers.tex
@@ -2108,12 +2108,6 @@ Per visualizzare le informazioni sui pacchetti si può utilizzare \texttt{tcpdum
     \item \texttt{-v}: stampa un output prolisso, contenente opzioni e vari campi per i singoli pacchetti
 \end{itemize}
 Altri comandi utili sono \texttt{traceroute}, \texttt{ping}, ecc. 
-% tcpdump {flags}
-% -t : no timestamp
-% -e : link-level headers
-% -n : no protocol name
-% -n : no DNS lookup
-% -i : sniff su {interfaccia}
 
 \subsection{Configurare un Lab}
 
@@ -2761,25 +2755,26 @@ Apache è estremamente configurabile con file \texttt{.htaccess}, ma proprio per
 
 \subsection{Data Center Routing}
 
-Nel routing all'interno di data center, ci si trova in uno stesso AS, gestito dalla stessa organizzazione, nonostante questo verrà usato BGP al loro interno. 
+Nel routing all'interno di data center, ci si trova in uno stesso AS, gestito dalla stessa organizzazione, nonostante questo, verrà usato BGP al suo interno. 
 
 
 Di solito all'interno di una rete locale si effettua instradamento attaccando varie VLAN, solamente usando switch. Questa configurazione è più semplice, ma non è efficiente, poiché in un Fat-Tree si massimizza la banda, quindi la maggior parte delle porte verranno spente. Si potrebbe effettuare load balancing utilizzando VLAN, ma è estremamente complicato. 
 LAN più grandi di barra 16 non sono effettivamente utilizzabili, a causa del protocollo ARP tutti i dispositivi collegati inviano pacchetti broadcast per ARP. 
-Nei data center si vuole evitare il più possibile, poiché si sprecherebbe una porzione di banda solo per ARP request. Se si occupa la rete occupando qualcosa che non dovrebbe passare, è banda sprecata, utilizzo sprecato. 
+Nei data center si vuole evitare il più possibile, poiché si sprecherebbe una porzione di banda solo per ARP request. 
 
-Per risolvere questi problemi, si lavora al livello tre, parlando di multipath, servono protocolli di routing. Queste configurazioni sono complesse, e si vuole rendere automatica, per evitare che errori umani compromettano la rete. 
+Per risolvere questi problemi, si lavora al livello tre, parlando di multipath, utilizzando protocolli di routing. Queste configurazioni sono complesse, e si vuole rendere automatica, per evitare che errori umani compromettano la rete. 
 
-Si potrebbero usare protocolli di rete IGP classici, OSPF o IS-IS, invece di RIP. Si potrebbe usare BGP, usato in data center hyper-scale. 
+Si potrebbero usare protocolli di rete IGP classici, OSPF o IS-IS, invece di RIP. Si potrebbe usare BGP, come nei data center hyper-scale. 
 
 Il protocollo RIFT, \textit{Routing In Fat-Trees}, standardizzato dall'IETF, è open source e ha prestazioni eccellenti sui Fat-Tree, ma viene implementato solo da alcuni vendor, per cui si potrebbero avere situazioni di vendor lock. 
-Altri protocolli com OpenFabric, una variante di IS-IS per topologie Clos, o SDN. 
+Esistono altri protocolli com OpenFabric, una variante di IS-IS per topologie Clos, o SDN. 
 
+\subsubsection{eBGP nei Data Center}
 
 BGP è uno dei protocolli che genera meno flooding di tutti, è stabile, la maggior parte dei problemi è stata sistemata dopo trent'anni di utilizzo. BGP ha un processo decisionale complesso, e può generare ECMP, \textit{Equal-Cost Multi-Path} a costo zero, semplicemente interrompendo il processo decisionale. 
 
 
-iBGP non fa routing, ma condivide rotte, è necessario un protocollo sottostante per il routing, quindi bisogna usare eBGP. 
+iBGP non effettua routing, ma condivide rotte, è necessario un protocollo sottostante per il routing, quindi bisogna usare eBGP. 
 In iBGP il multi-path è estremamente complesso da impostare e realizzare. 
 
 
@@ -2791,25 +2786,28 @@ Lo scopo di BGP è computare una singola best-path per una destinazione, nei dat
 
 Esiste uno standard su come usare BGP all'interno di un data center, descritto da RFC 7938. Si assegnano numeri di AS, si modificano le policy per ECMP, e bisogna modificare i timer interni del protocollo. 
 
-Per usare eBGP si hanno diversi AS che parlano tra di loro. Non bisogna usare numeri di AS noti, poiché gli operatori li associano ai nomi e riportarli nei data center può risultare in fraintendimenti. Inoltre, è pericoloso in caso ci siano delle leak di annunci BGP, che potrebbero causare interruzioni sulla rete, o rivelare informazioni interne al data center, che si vogliono mantenere segrete. 
+Per usare eBGP si hanno diversi AS che parlano tra di loro. Non bisogna usare numeri di AS noti, poiché gli operatori li associano ai nomi e riportarli nei data center può provocare fraintendimenti. Inoltre, è pericoloso in caso ci siano delle leak di annunci BGP, che potrebbero causare interruzioni sulla rete, o rivelare informazioni interne al data center, che si vogliono mantenere segrete. 
 
 Si utilizza il range di ASN privati, solo i 1023 AS nell'intervallo 64512 e 65534 sono privati. Se un router riceve annunci con questi numeri di AS, li scarta, se non ne appartiene. BGP è stato aggiornato per avere 4 byte per i numeri degli AS, supportando quasi un cento milioni di AS privati, sufficienti per configurare BGP in un data center. 
 
 L'assegnazione più semplice comprenderebbe di associare ogni nodo con un AS diverso, per il problema di BGP \textit{path exploration}. Nel momento in cui cade un pezzo della rete, va a ricerca di percorsi alternativi, essendo un algoritmo distribuito ogni router implementa una sua alternativa, comportando uno stato transitorio, prima di stabilizzarsi. 
 
+\subsubsection{Problema delle Rotte Incrociate}
+
 Per indicare multipath FRR indica le rotte migliori con \texttt|*|, e la prima viene indicata con \texttt|>|, le altre rotte equivalenti vengono marcate con \texttt|=|, per dire che sono equivalenti. Questo propaga la rotta incrociata, che non viene scelta poiché ha un AS path più lungo
 
 Se un router si spegne a causa di un guasto, i suoi peer se ne accorgono dato che l'interfaccia va giù, e la connessione TCP per il peering cade. Questi annunciano ai loro vicini di rimuovere i prefissi precedentemente annunciati che passano al router ora spento. Ma in caso di multi-path, le rotte dirette vengono rimosse, ma quelle incrociate non vengono rimosse, quindi è possibile che il traffico rimbalzi in maniera incontrollata tra i router presenti, è possibile che venga creato un loop di rete. Ed in un data center il quantitativo di traffico è presente a link saturo, quindi anche pochi secondi di loop possono realizzare problemi gravi. 
 
+\subsubsection{Assegnazione degli ASN}
 
 Per assegnare gli AS allora si utilizza una diversa alternativa, ogni foglia di un PoD ha un suo AS, i nodi spine di una stessa PoD hanno lo stesso AS. Mentre tutti i nodi dei ToF sullo stesso piano appartengono allo stesso AS. 
 Qui non si hanno peering iBGP, poiché i nodi nei ToF e nelle spine dei PoD non sono direttamente collegati. 
-Inoltre, serve siano sullo stesso AS solamente per l'algoritmo di loop avoidance di BGP, si blocca automaticamente senza rout-map le rotte incrociate. Automaticamente sono valley free, senza inserire politiche. 
+Inoltre, serve siano sullo stesso AS solamente per l'algoritmo di loop avoidance di BGP, si bloccano automaticamente senza rout-map le rotte incrociate. Automaticamente sono valley free, senza inserire politiche. 
 
 Si ottiene la scalabilità originale dei Fat-Tree, unita al loop avoidance, ed in caso di guasti prolungati evita di realizzare rotte anomale. Questo permette di avere più percorsi tra due foglie nello stesso PoD. 
-Per foglie tra due PoD diversi invece il numero di multi-path è esponenziale all'aumento di K. Questi passano per l'AS dello spine del proprio PoD, l'AS del ToF, e l'AS dello spine del PoD dove si trova la foglia. Essendo questi percorsi di stessa lunghezza, si può usare ECMP, essendo tutti dello stesso costo. 
+Per foglie tra due PoD diversi invece il numero di multi-path è esponenziale all'aumento di $K$. Questi passano per l'AS dello spine del proprio PoD, l'AS del ToF, e l'AS dello spine del PoD dove si trova la foglia. Essendo questi percorsi di stessa lunghezza, si può usare ECMP, essendo tutti dello stesso costo. 
 
-
+\subsubsection{Configurare BGP}
 
 In realtà BGP se si abilita ECMP di default, considera due rotte uguali se hanno tutte le metriche dell'algoritmo decisionale, eccetto per il router-ID, ma questo implica che i due annunci siano uguali, confrontando l'AS path elemento per elemento. Nelle multi-plane gli AS path non necessariamente saranno identici, quindi alcuni annunci avranno un percorso e per altri il contenuto dell'AS path sarà diverso. 
 
@@ -2911,7 +2909,7 @@ Usando traceroute, quando un router riceve un ICMP per time exceeded devono mand
 
 Facendo routing il traffico broadcast non esiste, avendo solamente connessioni via cavo tra due macchine, un pacchetto è sempre unicast a livello pratico, azzerando il broadcast, se non nella LAN dei server. Copiando una configurazione, bisogna modificare solamente il router ID, e l'ASN. 
 
-\subsubsection{VXLAN}
+\subsubsection{Virtual eXtensible Local Area Network: VXLAN}
 
 In una configurazione normale di un Fat Tree ogni server è legato solamente ad una leaf, se questa guasta, tutti i container su quel server vanno offline. 
 Un orchestratore quando vede che un set di container è andato offline, prova a crearne altri, per mantenere il numero di container prestabilito. 
@@ -2919,7 +2917,7 @@ Oltre a questo scopo di creare container, ha lo scopo di bilanciare il carico sp
 Lo scopo dell'orchestratore deve verificare che tutto è funzionante, quindi se dei container cadono prova a riavviarli, se si accorge che il server è guasto li re-istanzia sugli altri server. 
 
 Gli orchestratori possono effettuare queste operazioni anche su richiesta dell'utente. 
-Poiché questi container hanno un indirizzo IP, questo è legato al server, se vengono spostati su un altro server4, cambia l'indirizzo IP. All'interno di un datacenter i container vengono migrati spesso nella loro vita, per cui questo non può rappresentare un rallentamento per il data center. Non si possono reindirizzare i container ogni volta. 
+Poiché questi container hanno un indirizzo IP, questo è legato al server, se vengono spostati su un altro server, cambia l'indirizzo IP. All'interno di un datacenter i container vengono migrati spesso nella loro vita, per cui questo non può rappresentare un rallentamento per il data center. Non si possono reindirizzare i container ogni volta. 
 Per aspettare che le cache di DNS si allineino ci sarebbe un down time considerevole. 
 Nel momento in cui un datacenter diventa di un cloud provider, i container in un server appartengono ad utenti diversi, e si vedono tutti uno vicino all'altro perdendo l'isolamento tra server. 
 
@@ -2928,46 +2926,45 @@ Questi vorrebbero usare una LAN privata per comunicare con altre macchine dell'o
 
 Per gestire più utenti, bisogna capire l'architettura dei server. I server sono gestiti a tre livelli, il livello bare metal, l'hardware su cui operano le virtual machine, in queste macchine virtuali vengono creati i container offerti ai propri clienti. Si creano le VM per poter separare le risorse in modo più preciso. 
 In questo corso, si parlerà di due livelli soltanto, quindi si tratterà in maniera mischiata container o VM, a livello della rete non si hanno differenze. 
-Si deve permettere lo spostamento delle VM o container tra i vari server. Quando si vuole istanziate un orchestratore, per lavorare la meglio richiede una serie di qualità. Quando si sposta un container vuole avere un downtime minimo, e poter portare appresso l'indirizzo MAC del dispositivo. Tecnicamente è fattibile, poiché gli indirizzi MAC di VM e container sono virtuali. Dal punto di vista delle prestazioni di rete si vogliono per evitare di effettuare nuovamente richieste ARP. 
+Si deve permettere lo spostamento delle VM o container tra i vari server. Quando si vuole istanziate un orchestratore, per lavorare al meglio richiede una serie di qualità. Quando si sposta un container vuole avere un downtime minimo, e poter portare appresso l'indirizzo MAC del dispositivo. Tecnicamente è fattibile, poiché gli indirizzi MAC di VM e container sono virtuali. Dal punto di vista delle prestazioni di rete si vuole evitare di effettuare nuovamente richieste ARP. 
 
 Quando si ha una VM, il suo indirizzo MAC è scritto all'interno della VM stessa, altrimenti si avrebbero problemi a migrare tra VM. Si vuole avere uno spostamento rapido, e non si possono toccare tutte le macchine del data center per modificarne la cache. 
 
 Ulteriori requisiti dipendono dal tenant, o cliente, vorrebbero poter creare la propria LAN, e mantenerla privata, senza che altre VM o container sullo stesso server possano sniffare il traffico. 
-SI vuole isolare il traffico tra quello di altri clienti, ed isolare il traffico da quello del data center. 
+Si vuole isolare il traffico tra quello di altri clienti, ed isolare il traffico da quello del data center. 
 
 Questo è un requisito fondamentale del traffico, inoltre, ogni cliente vuole poter gestire il proprio indirizzo IP, come se la VM o container nel cloud fosse all'interno della rete privata, con IP privato, o all'interno dell'organizzazione del cliente. 
 
 Si vuole poter gestire il proprio spazio di indirizzamento. Quando si parla di IP privati, chiunque può usarli, quindi bisogna stare attenti a tenere le reti virtuali dei vari clienti isolate, altrimenti si potrebbero mischiare al traffico di altri utenti, che potrebbero essere malevoli. 
 
 
-Per rispettare questi requisiti si usano dei tunnel, dei canali di traffico che usano un'incapsulamento aggiuntivo, non usano il solito stack protocollare, ma è presente una duplicazione di parte dello stack protocollare. Si creano dei tunnel tra tutti i container dello stesso tenant, per isolarlo dal traffico del data center e dagli altri tenant. 
+Per rispettare questi requisiti si usano dei tunnel, dei canali di traffico che usano un'incapsulamento aggiuntivo, non usano il solito stack protocollare, per cui è presente una duplicazione di parte dello stack. Si creano dei tunnel tra tutti i container dello stesso tenant, per isolarlo dal traffico del data center e dagli altri tenant. 
 
 Il problema consiste nell'utilizzare un protocollo di tunnel opportuno, si vuole avere un tunnel incapsulato all'interno del livello quattro, per utilizzare a pieno il multi-path, il pacchetto deve essere almeno di livello tre, per poter attraversare i router. Inoltre, si vuole attraversare l'Internet, tra due data center dello stesso cloud provider, in modo trasparente dal punto di vista dell'utente. Se si usasse una stessa tecnologia per questi requisiti sarebbe molto favorevole dal punto di vista del data center. 
 I pacchetti di livello tre hanno dei problemi a passare sulla rete, poiché la maggior parte dei firewall usati in rete sono di livello quattro, per cui è necessario incapsularli a livello quattro, per evitare di essere scartati. 
 
 
-I protocolli di tunnel conosciuti sono VLAN, tecnicamente sono protocolli di tunnel, sono di livello due, quindi non possono essere usati nei data center di livello tre. MPLS può essere una scelta, poiché per ogni nuovo tenant bisogna creare una nuova etichetta e quindi riconfigurare ogni router, per effettuare label swapping correttamente, analogamente all'aggiunta di un container. La configurazione è pesante, e non è facile farlo passare via Internet, poiché è necessario avere accordi con ISP per inoltrarli sulla base dell'etichetta. 
+I protocolli di tunnel conosciuti sono VLAN, tecnicamente sono protocolli di tunnel, sono di livello due, quindi non possono essere usati nei data center di livello tre. MPLS può essere una scelta, tuttavia per ogni nuovo tenant bisogna creare una nuova etichetta e quindi riconfigurare ogni router, per effettuare label swapping correttamente, analogamente all'aggiunta di un container. La configurazione è pesante, e non è facile farlo passare via Internet, poiché è necessario avere accordi con ISP per inoltrarli su base dell'etichetta. 
 
-Si usa un nuovo protocollo chiamato VXLAN, creato ad-hox per risolvere problemi simili. \textit{Virtual eXtensible Local Area Network}, standardizzato in un RFC 7348. È stato creato apposta per gestire più tenant all'interno dello stesso data center. 
+Si usa un nuovo protocollo chiamato VXLAN, creato ad-hox per risolvere problemi simili. \textit{Virtual eXtensible Local Area Network}, standardizzato in RFC 7348. È stato creato apposta per gestire più tenant all'interno dello stesso data center. 
 Incapsula pacchetti di livello due, in realtà al livello due si parla di frame non di pacchetti, in pacchetti UDP. 
 Questo permette di migrare anche gli indirizzi MAC, per non alterare il pacchetto, non si ha bisogno di ricalcolare il checksum, che nel caso del pacchetto di livello due si chiama FCS, in coda al pacchetto. 
 
 Si è ottenuto isolamento, incapsulamento degli indirizzi MAC, attraversamento dei router e dell'Internet. 
 
 Dentro l'header UDP si inserisce un piccolo header VXLAN. Si hanno 24 bit per il campo VNI, \textit{VXLAN Network Identifier}, dedicato all'identificativo del tunnel, ben oltre le possibili VLAN, purtroppo si hanno 32 bit sprecati, sono bit riservati, per usi futuri, ma si è capito fossero completamente inutili. 
-Inoltre si hanno altri 8 bit per il VTEP, \textit{VXLAN Tunnel End Point}, il dispositivo della rete che si occupa dell'incapsulamento e de-incapsulamento dei pacchetti. 
+Inoltre, si hanno altri 8 bit per il VTEP, \textit{VXLAN Tunnel End Point}, il dispositivo della rete che si occupa dell'incapsulamento e de-incapsulamento dei pacchetti. 
 
-La porta di destinazione standard per VXLAN è definita dallo standard 4789. La porta sorgente è un campo che in realtà non serve a molto, solo quando si fanno delle connessioni TCP per avere dei pacchetti di ritorno. Si usa il campo sorgente di VXLAN ad un numero casuale in modo che ogni flusso di VXLAN ha un numero che cambia. Pensando al flusso tra due container, si avrà un outer IP uguale, così come la porta di destinazione, se non si variasse la porta sorgente, verrebbe scelto sempre lo stesso percorso, per cui si prende casuale per poter sfruttare al meglio il multi path. 
+La porta di destinazione standard per VXLAN è definita dallo standard 4789. La porta sorgente è un campo che in realtà non serve a molto, solo quando si fanno delle connessioni TCP per avere dei pacchetti di ritorno. Si pone il campo sorgente di VXLAN ad un numero casuale in modo che ogni flusso di VXLAN ha un numero che cambia, per sfruttare il multipath. Pensando al flusso tra due container, si avrà un outer IP uguale, così come la porta di destinazione, se non si variasse la porta sorgente, verrebbe scelto sempre lo stesso percorso.
 
-%% !! RECAP
 
-Bisogna essere completamente trasparente dal punto di vista dell'utente, non deve avere visibilità di nulla oltre al container. Bisogna incapsulare tutto ciò che passa attraverso il data-center e de-capsularlo quando esce. La porta sorgente è volutamente casuale per poter utilizzare il multi-path. 
+Bisogna essere completamente trasparente dal punto di vista dell'utente, non deve avere visibilità di nulla oltre al container. Bisogna incapsulare tutto ciò che passa attraverso il data-center ed estrarlo quando esce. 
 
 All'interno di un data center, si ha una rete privata, quindi si può aumentare la MTU usando un'opzione di ethernet chiamata jumbo-frame, che porta il frame a 9000 byte, quindi un overhead di 50 byte per l'incapsulamento VXLAN non è considerevole.   
 
 
-Il problema di base è che in un data center si hanno tante VTEP, ma si vorrebbe che il pacchetto avendo un MAC di destinazione arrivasse alla VTEP giusta. La VTEP di una macchina quando incapsula un pacchetto, deve sapere a chi inviarlo, a quale VTEP sulla stessa VNI.  
-Usa la tabella MAC-to-VTEP, altrimenti dovrebbe inviare il pacchetto in broadcast. Questa tabella tiene delle coppie MAC ed IP, dove il MAC è l'indirizzo della macchina interna alla VTEP, mentre l'indirizzo IP è relativo alla VTEP associata. 
+Il problema di base è che in un data center si hanno tante VTEP, ma si vorrebbe che il pacchetto avendo un MAC di destinazione arrivasse alla VTEP giusta. La VTEP di una macchina quando incapsula un pacchetto, deve sapere a chi inviarlo, a quale VTEP sulla stessa VXLAN.  
+Usa la tabella MAC-to-VTEP, altrimenti dovrebbe inviare il pacchetto in broadcast, rendendo inutile il routing eBGP. Questa tabella tiene delle coppie MAC ed IP, dove il MAC è l'indirizzo della macchina interna alla VTEP, mentre l'indirizzo IP è relativo alla VTEP associata. 
 Lavorano esattamente come le tabelle degli switch, quando passa un pacchetto attraverso una VTEP, si segna dove sono presenti le macchine, associando l'IP sorgente del pacchetto, ed il MAC interno aprendo il pacchetto. Queste entry hanno una scadenza, esattamente come la tabella degli switch. 
 Questo lega un indirizzo MAC ad un indirizzo IP, a differenza di uno switch che lega un indirizzo MAC ad una porta dello switch. 
 
@@ -2978,7 +2975,7 @@ Poiché non vengono usati quasi mai, non è nota quell'esperienza necessaria per
 Invece di disabilitare il traffico multicast, si utilizza la tecnica del proxy ARP, questo è il protocollo che causa il più traffico broadcast. Quando ad una VTEP arriva una ARP request, si potrebbe realizzare un proxy ARP su una VTEP, in modo che se un pacchetto ARP passa per un apparato che conosce la risposta, blocca il broadcast e risponde come se fosse il vero utente, invece di lasciar continuare la richiesta broadcast, creando un pacchetto finto, spacciandosi per l'utente finale e rispondendo. 
 
 Invece di questa soluzione, si usa EVPN-BGP, standardizzato da RFC, \textit{Ethernet VPN}, (EVPN). Utilizza MP-BGP, \textit{Multi-Protocol BGP}, questa è la capacità di BGP di trasportare dati di protocolli diversi. Questo è quello usato per andare oltre BGP classico, come IPv6, poiché BGP è nato con IPv4. L'idea è che esistono degli identificatori chiamati AFI, \textit{Address Family Identifier}, e SAFI, \textit{Subsequent AFI}, che rappresentano una famiglia di indirizzi. Vengono usati da BGP per trasmettere indirizzi IPv6, next-hop IPv6. Usando AFI pari a 25, e SAFI pari a 70, BGP, protocollo livello tre, annuncia indirizzi MAC. 
-Una VTP apprende automaticamente gli indirizzi MAC locali e gli annuncia alle altre VTEP della stessa VNI. Inoltre, le VTEP fanno da proxy ARP per limitare il traffico broadcast. 
+Una VTEP apprende automaticamente gli indirizzi MAC locali e gli annuncia alle altre VTEP della stessa VNI. Inoltre, le VTEP fanno da proxy ARP per limitare il traffico broadcast. 
 
 
 Due VTEP instaurano un peering eBGP multi-hop. All'accensione le macchine si mandano sempre un pacchetto, per cui una VTEP impara subito il MAC di una macchina locale, e lo passa subito annunciandolo ai suoi VTEP peer. 
@@ -3012,14 +3009,14 @@ L'ultima istruzione è accendere FRR, che si connette in automatico al bridge cr
 \begin{minted}[breaklines]{bash}
     ip address add {indirizzo} dev eth1
     
-    ip link add {nome-vtep} type vxlan id {vni} dev eth1 dstport {porta} local {indirizzo} nolearning
+    ip link add {nome-vtep} type vxlan id {vni} dev eth1 dstport 4789 local {indirizzo} nolearning
 
     ip link add {nome-bridge} type bridge
     ip link add {nome-bridge} addrgenmode none
 
     ip link set dev {nome-vtep} master {nome-bridge} addrgenmode none
     ip link set {nome-vtep} type bridge_slave neigh_suppress on learning off
-    ip link set dev eth0 master {nome-bridge} 
+    ip link set dev eth0 master {nome-bridge}
 
     ip link set up dev {nome-vtep}
     ip link set up dev {nome-bridge}
